优化编辑工具 、实现ACP协议中任务进度的推送